# databricks-cybersecurity-playground

dlt_modern_stuff/: README.md
dlt_modern_stuff/resources/: demo_detections.pipeline.yml  demo_ingest_apache_data.pipeline.yml  demo_ingest_aws_cloudtrail_data.pipeline.yml  demo_ingest_zeek_data.pipeline.yml  dlt_cyber_demo_setup.job.yml  uc_resources.yml
dlt_modern_stuff/src/: detections.py  ingest_apache_web.py
mcps/: README.md  app.yaml  databricks.yml  pyproject.toml
mcps/src/dbx_cyber_mcp/: __init__.py  app.py  main.py
uc-udfs/: community_id.sql
