[project]
name = "dbx-cyber-mcp-server"
version = "0.1.0"
description = "Custom MCP server on Databricks Apps"
readme = "README.md"
authors = [
    { name = "Alex Ott", email = "alexott@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.10.0",
    "uvicorn>=0.34.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dbx_cyber_mcp"]

[tool.hatch.build.hooks.custom]
path = "hooks/apps_build.py"

[project.scripts]
custom-server = "dbx_cyber_mcp.main:main"
